# vscode-schemas

./: .eslintrc.cjs  .gitignore  .gitmodules  .rustfmt.toml  .vercelignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  bun.lockb  eslint.config.js  main.ts  metadata.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  schema-list.json  schema-list.toml  schema-list2.json  test.json  tsconfig.base.json  tsconfig.json  turbo.json  vercel.json  version.json
.github/: labeler.yml  renovate.json
.github/workflows/: build-agents.yaml  build.yml  ci.yaml  generate-schemas.yml  schemas.yml  update-code-module.yaml  update-vscode-module.yaml  worker-deploy.yaml
apps/schema-extractor/: package.json  tsconfig.json
apps/schema-extractor-internal/: package.json  tsup.config.ts
apps/worker/: .graphqlrc.yaml  README.md  eslint.config.js  package.json  wrangler.toml
apps/www/: app.config.ts  astro.config.ts  eslint.config.js  nuxt.config.ts  package.json  tsconfig.json  uno.config.ts
code-patches/: jsonContributionRegistry.ts
code-prebuilt/: README.md  build.sh  vscode-types.patch
code-prebuilt/build-agents/: README.md
code-prebuilt/patches/: binary-name.patch  extension-host.patch
code-prebuilt/scripts/: fix-patches.sh  prepare.sh
code-prebuilt/types/: index.d.ts  morph.ts  package.json  tsconfig.json
crates/cli/: Cargo.toml
crates/code-builder/: Cargo.toml
crates/ducker/: Cargo.toml
crates/schema-core/: Cargo.toml
crates/schema-core/src/: agent.rs  errors.rs  github.rs  image.rs  lib.rs  scanner.rs
extracted-schemas/: ignoredSettings.json  keybindings.json  launch.json  vscode-extensions.json  workbench-colors.json
extracted-schemas/settings/: default.json  folder.json  machine.json  resourceLanguage.json  user.json
patches/: @solidjs__start@1.0.0-rc.0.patch  windowImpl.patch
scanner/: Cargo.toml
scanner/src/: docker.rs  lib.rs  main.rs
schema-extractor/: README.md  package.json  schema-extractor-0.0.1.vsix  tsconfig.json  webpack.config.js
schema-extractor/src/: constants.ts  extension.ts  types.ts  utils.ts
schema-gen/: Cargo.toml
schema-gen/src/: commands.rs  docker.rs  lib.rs  main.rs  scanner.rs
schema-service/: Cargo.toml  Dockerfile
schema-service/src/: compare.rs  docker.rs  error.rs  lib.rs  main.rs  releases.rs  repo.rs
schema-service/src/docker/: mod.rs
schema-service/src/markdown/: mod.rs  parser.rs
schema-service/src/octoduck/: README.md  from_response.rs  mod.rs  pagination.rs
schema-service/src/octoduck/api/: repos.rs
schema-service/src/octoduck/api/repos/: compares.rs  releases.rs
schema-service/src/octoduck/models/: compare.rs  mod.rs  release.rs  repos.rs
schemas/: .vscode-schemas.json  README.md
schemas/1.30.0/: .vscode-schemas.json
schemas/1.42.0/: .vscode-schemas.json
schemas/1.45.0/: .vscode-schemas.json
schemas/1.45.1/: .vscode-schemas.json
schemas/1.46.0/: .vscode-schemas.json
schemas/1.46.1/: .vscode-schemas.json
schemas/1.47.0/: .vscode-schemas.json
schemas/1.47.1/: .vscode-schemas.json
schemas/1.47.2/: .vscode-schemas.json
schemas/1.47.3/: .vscode-schemas.json
schemas/1.48.0/: .vscode-schemas.json
schemas/1.48.1/: .vscode-schemas.json
schemas/1.48.2/: .vscode-schemas.json
schemas/1.49.0/: .vscode-schemas.json
schemas/1.49.1/: .vscode-schemas.json
schemas/1.49.2/: .vscode-schemas.json
schemas/1.49.3/: .vscode-schemas.json
schemas/1.50.0/: .vscode-schemas.json
schemas/1.50.1/: .vscode-schemas.json
schemas/1.51.0/: .vscode-schemas.json
schemas/1.51.1/: .vscode-schemas.json
schemas/1.52.0/: .vscode-schemas.json
scripts/: run-all-generate.ts  run-all-scans.ts  run-all.ts  write-list.ts  write-markdown.ts
src/: cli.ts  deps.ts  download.ts  git.ts  log.ts  main.ts  queries.ts  releases.ts  scanner.ts  types.ts  utils.ts
src/commands/: dev.ts  (+4 more)
(+102 files in other folders)
