[package]
name = "schema-gen"
version = "0.1.0"
edition = "2021"

[lib]
name = "schema_lib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0", default-features = false }
log = "0.4"
env_logger = "0.9"
octocrab = "0.17"
tar = "0.4"
flate2 = "1.0"
regex = "1.7"
walkdir = "2.3"
bollard = "0.13"
futures-util = "0.3"
thirtyfour = "0.31"