[package]
name = "schema-gen"
version = "0.1.0"
edition = "2021"

[lib]
name = "schema_lib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0", default-features = false }
bollard = "0.13"
futures-util = "0.3"
thirtyfour = "0.31"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
tar = "0.4"
flate2 = "1.0"
walkdir = "2.3"
regex = "1.7"
octocrab = "0.17"
lazy_static = "1.4"
semver = "1.0"