[package]
name = "vscode-schemas"
version = "0.1.0"
edition = "2021"

[lib]
name = "schema_lib"
path = "src/lib.rs"

[dependencies]
octocrab = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
url = { version = "2.2", features = ["serde"] }
toml = "0.5"
log = "0.4"
markdown-gen = "1.2.1"
pulldown-cmark = "0.9.1"
