[package]
name = "vscode-schemas"
version = "0.1.0"
edition = "2021"

[lib]
name = "schema_lib"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
markdown-gen = "1.2.1"
pulldown-cmark = "0.9.1"
bollard = "0.12"
futures-util = "0.3.21"

# Logging
log = "0.4"
env_logger = "0.8"

# IO
tar = "0.4"
flate2 = "1.0"
walkdir = "2.3"

# Misc
regex = "1.5"
octocrab = "0.16"
