[package]
name = "schema_core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
octocrab = { version = "0.17" }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
bollard = "0.13"
async-trait = "0.1"
semver = "1.0"
tar = "0.4"
flate2 = "1.0"
futures-util = "0.3"
